# Django-REST-Framework

./: .env  pyproject.toml  requirements.txt
config/: settings.py
materials/: models.py  serializers.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_alter_lesson_course.py  0003_alter_lesson_course.py
users/: models.py
users/migrations/: 0001_initial.py
