[tool.poetry]
name = "django rest framework"
version = "0.1.0"
description = ""
authors = ["Svetlana Bazhenova <varta.73@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
